[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/BoxColliders/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/BoxColliders/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 61.0741

[node name="Enemy" type="KinematicBody2D"]
z_index = 3
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 32

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 16

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.0883894, 9.53674e-07 )
scale = Vector2( 0.195667, 0.2487 )

[node name="Vision" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
visible = false
modulate = Color( 0.243137, 0, 1, 1 )
shape = SubResource( 1 )

[node name="PoisonTimer" type="Timer" parent="."]

[node name="FreezeTimer" type="Timer" parent="."]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="PoisonTimer" to="." method="_on_PoisonTimer_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
